# RuffTool

./: .gitignore  Global.dff  PacificCity.dff  main.py  pyproject.toml  utils.py
handlers/: dff_handler.py
parsers/: README.MD  dff.py
