[project]
name = "rufftool"
version = "0.1.0"
description = "A tool for interacting with crackdown 2 game files."
readme = "README.md"
license = "GPL-3.0-or-later"
requires-python = ">=3.13"
dependencies = [
    "cyclopts>=4.22.1",
    "kaitaistruct>=0.11",
]

[project.scripts]
rufftool-cli = "rufftool:main_cli"